--- a/product_manager/client/src/App.css
+++ b/product_manager/client/src/App.css
@@ -13,7 +13,7 @@
   }
 }
 
-.App-header {
+form {
   background-color: #282c34;
   min-height: 100vh;
   display: flex;
@@ -21,7 +21,7 @@
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
-  color: white;
+  color: #61dafb;
 }
 
 .App-link {
@@ -32,6 +32,7 @@
   from {
     transform: rotate(0deg);
   }
+
   to {
     transform: rotate(360deg);
   }
